# mutmut-win

./: .gitignore  CLAUDE.md  README.md  e2e-test-protocol.md  hooks.md  inspection.md  mutmut-win-install.md  pyproject.toml  seqthinking.md
.claude/: settings.json  settings.local.json
.claude/hooks/: hook-diagnostic.sh  post-compact-reminder.sh  sprint-gate.sh  sprint-health.sh  sprint-housekeeping-reminder.sh  sprint-state-save.sh  verify-after-agent.sh
.claude/skills/debug/: SKILL.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md
.sprint/: .last-gate-commit  state.md
.sprint/.fs-mcp-versions/: state.md.v2.f383b67a100e46c598852dc1172b9e19  state.md.v3.9209b53256d84e10829cdf03bc77872c  state.md.v4.ed20215442264b12a99dc90ebbcb0010  state_test.md.v1.d1ea125e88d543c18fbadb4cc9e4b6fb  state_test2.md.v1.71eb0cfb3b90460d86690b2f8a61ae8b
_config/: development_process.md
_docs/: 360-cross-check-v2.md  360-cross-check-v3-exhaustive.md  360-cross-check.md  mutmut-win-install.md
_docs/architecture spec/: architecture_specification.md
_docs/architecture spec/.fs-mcp-versions/: architecture_specification.md.v1.08d56f5a234d431393feec95b6d19c24
_docs/design spec/: software_design_spec.md  software_design_specification.md
_docs/product backlog/: product_backlog.md
_docs/product backlog/.fs-mcp-versions/: product_backlog.md.v1.a2feb47d15984aa782592cb166afc66d
_docs/specs/: 2026-03-29-mutmut-win-design.md
_docs/sprint backlogs/: sprint_14_backlog.md  sprint_15_backlog.md  sprint_21_backlog.md
_docs/templates/product backlog/: product_backlog.md
_issues/: BUG_REPORT.md  BUG_REPORT_2.md  BUG_REPORT_3.md  BUG_REPORT_4.md  BUG_REPORT_5.md  BUG_REPORT_5_RESPONSE.md  BUG_REPORT_6.md  BUG_REPORT_7.md  FEATURE_REQUEST_TIMEOUT_DIAGNOSTICS.md  Python Entwicklerprojekt.txt  UPGRADE_v1.0.11_MIGRATION.md  Verbesserungspotential Retrospektive mit Python Projekten.txt  mutmut-win-bugs.md
_references/: mutmut_pull_404.md  mutmuti_issues_397.md
src/mutmut_win/: __init__.py  __main__.py  _state.py  browser.py  cli.py  code_coverage.py  config.py  constants.py  db.py  exceptions.py  file_setup.py  models.py  mutant_diff.py  mutation.py  node_mutation.py  orchestrator.py  regex_mutation.py  runner.py  stats.py  test_mapping.py  trampoline.py  type_checker_filter.py  type_checking.py
src/mutmut_win/process/: __init__.py  executor.py  job_object.py  timeout.py  worker.py
tests/: conftest.py  test_architecture.py
tests/e2e_projects/: expected_results.py
tests/e2e_projects/my_lib/src/my_lib/: __init__.py
tests/e2e_projects/my_lib/tests/: test_my_lib.py
tests/e2e_projects/simple_lib/: pyproject.toml
tests/e2e_projects/simple_lib/src/simple_lib/: __init__.py
tests/e2e_projects/simple_lib/tests/: test_simple.py
tests/e2e_projects/stress_test/: pyproject.toml
tests/e2e_projects/stress_test/src/stress_lib/: __init__.py  algorithms.py  async_ops.py  config_parser.py  data_structures.py  math_ops.py  state_machine.py  string_utils.py  validators.py
tests/e2e_projects/stress_test/tests/: conftest.py  test_algorithms.py  test_async_ops.py  test_config_parser.py  test_data_structures.py  test_math_ops.py  test_state_machine.py  test_string_utils.py  test_validators.py
tests/integration/: test_e2e.py  test_e2e_reference.py
tests/unit/: test_cli.py  test_code_coverage.py  test_config.py  test_constants.py  test_db.py  test_exceptions.py  test_file_setup.py  test_job_object.py  test_math_mutations.py  test_models.py  test_mutant_diff.py  test_mutation.py  test_node_mutation.py  test_orchestrator.py  test_process_executor.py  test_process_timeout.py  test_process_worker.py  test_regex_mutation.py  test_return_conditional.py  test_runner.py  test_state.py  test_statement_collection_or.py  test_stats.py  test_test_mapping.py  test_trampoline.py  test_type_checker_filter.py  test_type_checking.py
