[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mutmut-win"
version = "1.0.0"
description = "Windows-native mutation testing for Python, based on mutmut 3.5.0"
readme = "README.md"
license = "ISC"
requires-python = ">=3.12"
authors = [
    { name = "pgm1980" },
]
keywords = ["mutation-testing", "testing", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0.0",
    "coverage>=7.3.0",
    "libcst>=1.8.5",
    "pydantic>=2.0.0",
    "pytest>=6.2.5",
    "setproctitle>=1.1.0",
    "textual>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "pytest-benchmark>=5.1",
    "hypothesis>=6.119",
    "import-linter>=2.1",
    # mutmut-win is this project itself — no external mutation testing dependency needed.
    # To run mutation testing: uv run mutmut-win run --paths-to-mutate src/mutmut_win/
    "mypy>=1.13",
    "ruff>=0.8",
    "pip-audit>=2.7",
]

[project.scripts]
mutmut-win = "mutmut_win.cli:cli"

[tool.mutmut]
paths_to_mutate = ["src/mutmut_win/regex_mutation.py"]
tests_dir = ["tests/unit/"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    # Reference fixture projects copied from mutmut 3.5.0 — not subject to our lint rules.
    "tests/e2e_projects",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "S",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PERF",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests",
    "integration: integration tests",
]
testpaths = ["tests"]
python_functions = ["test_*"]

[tool.importlinter]
root_packages = ["mutmut_win"]

[[tool.importlinter.contracts]]
name = "Layer architecture"
type = "layers"
layers = [
    "mutmut_win.cli | mutmut_win.browser",
    "mutmut_win.orchestrator | mutmut_win.runner | mutmut_win.mutant_diff",
    "mutmut_win.config | mutmut_win.models | mutmut_win.constants | mutmut_win.mutation | mutmut_win.node_mutation | mutmut_win.trampoline",
    "mutmut_win.process",
]
