[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-lib"
version = "0.1.0"
description = "Minimal library for E2E mutation testing"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mutmut]
paths-to-mutate = ["src/simple_lib/"]
tests-dir = ["tests/"]
max-children = 2
timeout-multiplier = 5.0
