[project]
name = "stress-lib"
version = "0.1.0"
description = "Stress test project for mutmut-win — 300-500+ mutants"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stress_lib"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[tool.mutmut]
paths-to-mutate = ["src/"]
tests-dir = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
